--- a/src/app/quiz/quiz-questions/whats-the-name/whats-the-name.component.html
+++ b/src/app/quiz/quiz-questions/whats-the-name/whats-the-name.component.html
@@ -1,8 +1,11 @@
 <p>Wie ist der Name dieser Karte?</p>
 {{this.card.name}}
 <div *ngFor="let answer of answers">
-    <div class="answer"
-         [@fadeOutRightBig]="answer.animate"
+    <div class="answer" *ngIf="answer.correct == true">
+        <ion-button (click)="validate(answer)" type="button" size="block" color="primary">{{answer.name}}</ion-button>
+    </div>
+    <div class="answer" *ngIf="answer.correct == false"
+         [@fadeOutRightBig]="showSolution"
          (@fadeOutRightBig.done)="onAnimationEvent($event, answer)"
          [ngClass]="answer.hide ? 'hide' : ''">
         <ion-button (click)="validate(answer)" type="button" size="block" color="primary">{{answer.name}}</ion-button>
