added new questions

--- a/src/app/quiz/quiz-questions/whats-the-color/whats-the-color.component.html
+++ b/src/app/quiz/quiz-questions/whats-the-color/whats-the-color.component.html
@@ -1,9 +1,9 @@
 <p>Welche Farbe?</p>
-
 <div class="colors">
     <ng-container *ngFor="let answer of answers">
         <ion-button *ngIf="answer.correct == true"
-                    [ngClass]="isColorSelected(answer.color) ? answer.color + 'glow' : answer.color"
+                    class="{{answer.color}}"
+                    [ngClass]="isColorSelected(answer.color) ? ' glow' : ''"
                     (click)="toggleColor(answer.color)"
                     [@fadeOutRightBig]="showSolution"
                     type="button" size="block" color="light">
