--- a/src/global.scss
+++ b/src/global.scss
@@ -19,12 +19,10 @@ ion-backdrop {
   background-color: #819fb1;
 }
 
-.mtg-toast {
-  opacity: 0.8;
-  width: 100%;
-  max-width: 100%;
-  margin: -8px;
-  height: 80px;
-  background-color: #eee;
-  border-radius: 0px;
+ion-button.glow {
+    box-shadow: 0px 0px 10px grey;
+}
+
+ion-button.hide {
+  visibility: hidden;
 }
