--- a/src/app/quiz/quiz.page.html
+++ b/src/app/quiz/quiz.page.html
@@ -1,3 +1,9 @@
+<ion-header padding-start padding-end>
+    <ion-toolbar>
+        <span slot="start">Frage: <b>{{cardIndex}}</b></span>
+        <span slot="end">{{errors}}/{{maxErrors}}</span>
+    </ion-toolbar>
+</ion-header>
 <ion-content padding>
     <ng-container>
         <ion-grid>
