--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,7 +7,6 @@
 <ion-content align-items-center justify-content-center>
   <div id="progress-indicator" *ngIf="startingQuiz">Loading ...</div>
   <div id="menu" *ngIf="!startingQuiz">
-    <ion-button size="block" (click)="startQuiz(5)">Quiz (5 Cards)</ion-button>
-    <ion-button size="block" (click)="startQuiz(10)">Quiz (10 Cards)</ion-button>
+    <ion-button size="block" (click)="startQuiz()">Start</ion-button>
   </div>
 </ion-content>
