--- a/src/app/quiz/quiz-questions/whats-the-rarity/whats-the-rarity.component.html
+++ b/src/app/quiz/quiz-questions/whats-the-rarity/whats-the-rarity.component.html
@@ -1,19 +1,21 @@
 <p>Wie selten ist diese Karte?</p>
-<div *ngFor="let answer of answers">
-  <ion-button *ngIf="answer.correct == true"
-              [ngClass]="isAnswerSelected(answer) ? ' glow' : ''"
-              (click)="selectAnswer(answer)"
-              type="button" size="block" color="light" fill="solid">
-    {{answer.value}}
-  </ion-button>
+<div class="answers">
+    <ng-container *ngFor="let answer of answers">
+        <ion-button *ngIf="answer.correct == true"
+                    [ngClass]="isAnswerSelected(answer) ? ' glow' : ''"
+                    (click)="selectAnswer(answer)"
+                    type="button" size="block" color="light" fill="solid">
+            {{answer.value}}
+        </ion-button>
 
-  <ion-button *ngIf="answer.correct == false"
-              [@fadeOutRightBig]="showSolution"
-              (@fadeOutRightBig.done)="onAnimationEvent($event, answer)"
-              (click)="selectAnswer(answer)" type="button" size="block" color="primary"
-              [ngClass]="{'glow': isAnswerSelected(answer), 'hide': answer.hide}"
-              type="button" size="block" color="light" fill="solid">
-    {{answer.value}}
-  </ion-button>
+        <ion-button *ngIf="answer.correct == false"
+                    [@fadeOutRightBig]="showSolution"
+                    (@fadeOutRightBig.done)="onAnimationEvent($event, answer)"
+                    (click)="selectAnswer(answer)" type="button" size="block" color="primary"
+                    [ngClass]="{'glow': isAnswerSelected(answer), 'hide': answer.hide}"
+                    type="button" size="block" color="light" fill="solid">
+            {{answer.value}}
+        </ion-button>
+    </ng-container>
 </div>
-<ion-button size="block" (click)="validate($event)">OK</ion-button>
+<ion-button size="block" (click)="validate()">OK</ion-button>
