--- a/src/global.scss
+++ b/src/global.scss
@@ -19,6 +19,10 @@ ion-backdrop {
   background-color: #819fb1;
 }
 
+.answers {
+  margin-bottom: 24px;
+}
+
 ion-button.glow {
     box-shadow: 0px 0px 10px grey;
 }
