--- a/src/app/quiz/banner/banner.component.html
+++ b/src/app/quiz/banner/banner.component.html
@@ -1,6 +1,1 @@
-<div class="banner-wrapper">
-    <div class="banner">
-        <ion-button (click)="handleRestart()">RESTART</ion-button>
-    </div>
-</div>
-
+<img src="{{card.image_uris.border_crop}}" (click)="handleNext()">
