--- a/src/app/quiz/banner/banner.component.scss
+++ b/src/app/quiz/banner/banner.component.scss
@@ -1,29 +1,11 @@
-.banner-wrapper {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  z-index: 6000;
-}
-
-.banner-wrapper .banner {
-  position: fixed;
-  width: 100%;
-  height: 100px;
-  z-index: 6000;
-  background-color: #eee;
-  opacity: 0.9;
+img {
+  position: absolute;
   top: 50%;
-  margin-top: -50px;
-  display: flex;
-  align-content: center;
-  justify-content: center;
-}
-
-
-.banner-wrapper .banner div {
-  align-self: center;
-  justify-self: center;
-  font-weight: bold;
-  font-size: 125%;
-  text-shadow: 1px 1px 1px black;
+  left: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translate(-50%, -50%);
+  padding: 12px;
+  border-radius: 4px;
+  background-color: white;
+  width: 90%;
 }
