--- a/src/app/quiz/quiz-questions/whats-the-color/whats-the-color.component.html
+++ b/src/app/quiz/quiz-questions/whats-the-color/whats-the-color.component.html
@@ -2,19 +2,18 @@
 <div class="answers">
     <ng-container *ngFor="let answer of answers">
         <ion-button *ngIf="answer.correct == true"
-                    class="{{answer.value}}"
-                    (click)="answer.selected = !answer.selected"
+                    [ngClass]="{'glow': answer.selected}"
                     type="button" size="block"
-                    color="{{answer.selected ? 'primary' : 'light'}}">
+                    (click)="answer.selected = !answer.selected">
             <img src="../../assets/icon/{{answer.value}}.svg">
         </ion-button>
         <ion-button *ngIf="answer.correct == false"
                     class="{{answer.value}}"
                     [ngClass]="{'glow': answer.selected, 'hide': answer.hide}"
+                    type="button" size="block" color="light"
                     (click)="answer.selected = !answer.selected"
                     [@fadeOutRightBig]="showSolution"
-                    (@fadeOutRightBig.done)="onAnimationEvent($event, answer)"
-                    type="button" size="block" color="light">
+                    (@fadeOutRightBig.done)="onAnimationEvent($event, answer)">
             <img src="../../assets/icon/{{answer.value}}.svg">
         </ion-button>
     </ng-container>
