--- a/src/app/quiz/quiz.page.html
+++ b/src/app/quiz/quiz.page.html
@@ -1,15 +1,14 @@
 <ion-content padding-start padding-end>
     <ng-container *ngIf="currentCard$ | async as currentCard">
-        <ion-grid>
-            {{currentCard.name}}
-            <ion-row class="justify-content-center align-items-center">
-                <app-quiz-card [card]="currentCard"></app-quiz-card>
-            </ion-row>
-        </ion-grid>
-        <ng-container *ngIf="quizService.isCardLoaded$ | async">
+
+        <div class="ion-margin">
+            <app-quiz-card [card]="currentCard"></app-quiz-card>
+        </div>
+
+        <div class="ion-margin-start ion-margin-end" *ngIf="quizService.isCardLoaded$ | async">
             <app-quiz-questions [card]="currentCard"
                                 (answer)="handleQuizQuestionResult(currentCard, $event)"></app-quiz-questions>
-        </ng-container>
+        </div>
     </ng-container>
 </ion-content>
 
