--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,3 +1,8 @@
 <ion-content>
-  <ion-button color="medium" fill="outline" (click)="startQuiz()">START</ion-button>
+  <div>
+  <ion-button color="medium" fill="outline" expand="block" (click)="startQuiz('standard')">Standard (Easy Cheezy)</ion-button>
+  </div>
+  <div>
+  <ion-button color="medium" fill="outline" expand="block" (click)="startQuiz('modern')">Modern (WTF?)</ion-button>
+  </div>
 </ion-content>
