--- a/src/app/quiz/quiz-questions/whats-the-name/whats-the-name.component.html
+++ b/src/app/quiz/quiz-questions/whats-the-name/whats-the-name.component.html
@@ -1,12 +1,10 @@
-<ion-label color="medium">
-    Wie ist der Name dieser Karte?
-</ion-label>
+<ion-label color="dark">Wie ist der Name dieser Karte?</ion-label>
 <div class="answers">
     <ng-container *ngFor="let answer of answers">
         <ion-button [ngClass]="{'glow': answer.selected}"
                     (click)="selectAnswer(answer)"
-                    type="button" expand="block" size="small"
-                    [color]="showSolution && answer.correct ? 'success' : 'light'"
+                    type="button" fill="outline" expand="block" size="small"
+                    [color]="showSolution && answer.correct ? 'success' : 'medium'"
                     [@changeState]="showSolution ? answer.state : defaultState">
             <ion-icon slot="start" name="arrow-dropright" *ngIf="answer.selected"></ion-icon>
             {{answer.value}}
