--- a/src/app/quiz/quiz-questions/whats-the-rarity/whats-the-rarity.component.html
+++ b/src/app/quiz/quiz-questions/whats-the-rarity/whats-the-rarity.component.html
@@ -3,8 +3,8 @@
     <ng-container *ngFor="let answer of answers">
         <ion-button [ngClass]="{'glow': answer.selected}"
                     (click)="selectAnswer(answer)"
-                    type="button" expand="block" size="small"
-                    [color]="showSolution && answer.correct ? 'success' : 'light'"
+                    type="button" fill="outline" expand="block" size="small"
+                    [color]="showSolution && answer.correct ? 'success' : 'medium'"
                     [@changeState]="showSolution ? answer.state : defaultState">
             <ion-icon slot="start" name="arrow-dropright" *ngIf="answer.selected"></ion-icon>
             {{answer.value}}
