--- a/src/app/quiz/quiz-questions/whats-the-name/whats-the-name.component.html
+++ b/src/app/quiz/quiz-questions/whats-the-name/whats-the-name.component.html
@@ -3,7 +3,7 @@
     <ng-container *ngFor="let answer of answers">
         <ion-button [ngClass]="{'glow': answer.selected}"
                     (click)="selectAnswer(answer)"
-                    type="button" fill="outline" expand="block" size="small"
+                    type="button" fill="solid" expand="block" size="small"
                     [color]="showSolution && answer.correct ? 'success' : 'medium'"
                     [@changeState]="showSolution ? answer.state : defaultState">
             <ion-icon slot="start" name="arrow-dropright" *ngIf="answer.selected"></ion-icon>
@@ -12,7 +12,6 @@
         </ion-button>
     </ng-container>
 </div>
-
 <ion-button size="block" (click)="validate()">OK</ion-button>
 
 
