--- a/src/app/quiz/quiz-card/quiz-card.component.html
+++ b/src/app/quiz/quiz-card/quiz-card.component.html
@@ -1,3 +1,2 @@
-<div class="text-center">
-    <img src="{{base64Image}}">
-</div>
+<img [width]="artWidth" [height]="artHeight" src="{{base64Image}}">
+
