--- a/src/app/quiz/quiz-questions/whats-the-color/whats-the-color.component.html
+++ b/src/app/quiz/quiz-questions/whats-the-color/whats-the-color.component.html
@@ -1,10 +1,9 @@
-<p>Welche Farbe?</p>
 <div class="answers">
     <ng-container *ngFor="let answer of answers">
         <ion-button [ngClass]="{'glow': answer.selected}"
                     (click)="answer.selected = !answer.selected"
-                    type="button" fill="outline" expand="block" size="small"
-                    [color]="showSolution && answer.correct ? 'success' : 'medium'"
+                    type="button" fill="clear" expand="block" size="small"
+                    [color]="showSolution && answer.correct ? 'success' : 'dark'"
                     [@changeState]="showSolution ? answer.state : defaultState">
             <ion-icon slot="start" name="arrow-dropright" *ngIf="answer.selected"></ion-icon>
             <img src="../../assets/icon/{{answer.value}}.svg">
