--- a/src/app/quiz/quiz.page.html
+++ b/src/app/quiz/quiz.page.html
@@ -1,66 +1,51 @@
-<div class="card-container">
-
-    <div class="card-background">
-
-        <div class="card-frame">
-
-            <div class="frame-header">
-                <h1 class="name">Oath of Nissa</h1>
-                <i class="ms ms-g" id="mana-icon"></i>
-            </div>
-
-            <img class="frame-art" src="https://image.ibb.co/fqdLEn/nissa.jpg" alt="nissa art">
-
-            <div class="frame-type-line">
-                <h1 class="type">Legendary Enchantment</h1>
-                <img src="https://image.ibb.co/kzaLjn/OGW_R.png" id="set-icon" alt="OGW-icon">
-            </div>
-
-            <div class="frame-text-box">
-                <p class="description ftb-inner-margin">When Oath of Nissa enters the battlefield, look at the top three cards of your library. You may reveal a creature, land, or planeswalker card from among them and put it into your hand. Put the rest on the bottom of your library in any order.
-                </p>
-                <p class="description">
-                    You may spend mana as though it were mana of any color to cast planeswalker spells.
-                </p>
-                <p class="flavour-text">"For the life of every plane, I will keep watch."
-                </p>
-            </div>
-
-            <div class="frame-bottom-info inner-margin">
-                <div class="fbi-left">
-                    <p>140/184 R</p>
-                    <p>OGW &#x2022; EN <!--   <img class="paintbrush" src="https://image.ibb.co/e2VxAS/paintbrush_white.png" alt="paintbrush icon">--> Wesley Burt</p>
-                </div>
-
-                <div class="fbi-center"></div>
-
-                <div class="fbi-right">
-                    &#x99; &amp; &#169; 2016 Wizards of the Coast
-                </div>
-            </div>
-
-        </div>
-
-    </div>
-
-</div>
-
-
-
-
-
 <ion-content>
     <ion-row>
-        <ion-col size="4" offset="4" class="ion-margin">
-            <app-quiz-card [card]="currentCard"></app-quiz-card>
-        </ion-col>
-    </ion-row>
-    <ion-row>
-        <ion-col size="4" offset="4">
-            <div *ngIf="quizService.isCardLoaded$ | async">
-                <app-quiz-questions [card]="currentCard"
-                                    (answer)="handleQuizQuestionResult(currentCard, $event)"></app-quiz-questions>
+        <ion-col size="5" >
+            <div class="card-container">
+                <div class="card-background">
+                    <div class="card-frame">
+
+                        <div class="frame-header">
+                            <h1 class="name">Quiz - Standard</h1>
+                            <i class="ms ms-g" id="mana-icon"></i>
+                        </div>
+
+                        <div class="frame-art">
+                            <app-quiz-card [card]="currentCard"></app-quiz-card>
+                        </div>
+
+                        <div class="frame-type-line">
+                            <h1 class="type">Legendary Enchantment</h1>
+                        </div>
+
+                        <div class="frame-text-box">
+                            <div *ngIf="quizService.isCardLoaded$ | async">
+                                <app-quiz-questions [card]="currentCard"
+                                                    (answer)="handleQuizQuestionResult(currentCard, $event)"></app-quiz-questions>
+                            </div>
+                        </div>
+
+                        <div class="frame-bottom-info inner-margin">
+                            <div class="fbi-left">
+                                <p>hfgl</p>
+                                <p>001 &#x2022; EN
+                                    <img class="paintbrush" src="https://image.ibb.co/e2VxAS/paintbrush_white.png"
+                                         alt="paintbrush icon"> druckreich</p>
+                            </div>
+
+                            <div class="fbi-right">
+                                &#x99; &amp; &#169; 2016 Wizards of the Coast
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
             </div>
+        </ion-col>
+        <ion-col size="5">
+            <img src="{{currentCard.image_uris.border_crop}}">
         </ion-col>
     </ion-row>
 </ion-content>
