--- a/src/app/quiz/quiz.page.scss
+++ b/src/app/quiz/quiz.page.scss
@@ -1,17 +1,15 @@
 .card-container {
   border: 1px solid black;
-  width: 500px;
-  height: 700px;
+  width: 460px;
+  height: 680px;
   margin: 0 auto;
-  margin-top: 56px;
-  border-radius: 25px;
   box-sizing: border-box;
   box-shadow: -8px 9px 16px -3px gray;
   background: #171314;
 }
 .card-background {
   height: 600px;
-  margin: 20px 20px 0 20px;
+  margin: 10px 10px 0px 10px;
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
   border-bottom-left-radius: 8%;
@@ -143,7 +141,7 @@
 }
 
 .frame-text-box {
-  margin: 0 10px;
+  margin: 0 15px;
   background: #d3ded6;
   background-image: url(https://image.ibb.co/dFcNx7/tile_bg_2.jpg);
   display: flex;
@@ -151,6 +149,8 @@
   justify-content: space-around;
   padding: 50px 6px;
   font-size: 1.2em;
+  width: 400px;
+  height: 214px;
 }
 
 .flavour-text {
@@ -204,7 +204,7 @@ fbi-left {
 }
 .inner-margins {
   margin: 0 10px;
-} 
+}
 
 
 
