--- a/src/app/quiz/quiz-questions/whats-the-color/whats-the-color.component.html
+++ b/src/app/quiz/quiz-questions/whats-the-color/whats-the-color.component.html
@@ -2,17 +2,20 @@
     <ng-container *ngFor="let answer of answers">
         <ion-button [ngClass]="{'glow': answer.selected}"
                     (click)="answer.selected = !answer.selected"
-                    type="button" fill="clear" expand="block" size="small"
+                    type="button" fill="clear" expand="block"
                     [color]="showSolution && answer.correct ? 'success' : 'dark'"
                     [@changeState]="showSolution ? answer.state : defaultState">
             <ion-icon slot="start" name="arrow-dropright" *ngIf="answer.selected"></ion-icon>
             <img src="../../assets/icon/{{answer.value}}.svg">
             <ion-icon slot="end" name="arrow-dropleft" *ngIf="answer.selected"></ion-icon>
-
         </ion-button>
     </ng-container>
 </div>
-<ion-button size="block" (click)="validate()">OK</ion-button>
+<ion-fab class="validate" vertical="bottom" horizontal="end" slot="fixed" *ngIf="!showSolution">
+    <ion-fab-button color="primary" (click)="validate()">
+        <ion-icon name="checkmark"></ion-icon>
+    </ion-fab-button>
+</ion-fab>
 
 
 
