--- a/src/app/quiz/quiz.page.scss
+++ b/src/app/quiz/quiz.page.scss
@@ -1,8 +1,20 @@
-.card-container {
-  border: 1px solid black;
-  width: 460px;
+.container {
+  position: relative;
+  width: 480px;
   height: 680px;
-  margin: 0 auto;
+}
+
+.border-art {
+  position: absolute;
+  z-index: 2;
+}
+
+.card-container {
+  position: absolute;
+  border: 1px solid black;
+  width: 480px;
+  height: 680px;
+  //margin: 0 auto;
   box-sizing: border-box;
   box-shadow: -8px 9px 16px -3px gray;
   background: #171314;
@@ -82,7 +94,7 @@
   max-width: 97%;
   left: 1%;
   top: 0.5%;
-  left: 1.2%;
+  left: 1.6%;
   display: flex;
   flex-direction: column;
 }
@@ -114,7 +126,7 @@
   font-weight: 600;
 }
 
-#mana-icon {
+.mana-icon {
   font-size: 1.4em;
   background: #ADD3AC;
   border-radius: 50%;
@@ -126,7 +138,7 @@
 }
 .frame-art {
   height: 50%;
-  margin: 0 10px;
+  margin: 0 13px;
 }
 
 #set-icon {
@@ -141,7 +153,7 @@
 }
 
 .frame-text-box {
-  margin: 0 15px;
+  margin: 0 12px;
   background: #d3ded6;
   background-image: url(https://image.ibb.co/dFcNx7/tile_bg_2.jpg);
   display: flex;
@@ -149,7 +161,7 @@
   justify-content: space-around;
   padding: 50px 6px;
   font-size: 1.2em;
-  width: 400px;
+  width: 418px;
   height: 214px;
 }
 
@@ -205,9 +217,6 @@ fbi-left {
 .inner-margins {
   margin: 0 10px;
 }
-
-
-
 
 .fbi-right {
   flex: 1;
